chore: fatJAR documentation