@@ -5,16 +5,16 @@ plugins {
 }
 
 group = "br.com.getronics"
-version = "1.0-SNAPSHOT"
+version = "1.0"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
 javafx {
-    version = "25.0.2"
+    version = "21"
     modules("javafx.controls", "javafx.fxml")
 }
 
@@ -26,32 +26,48 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    // Log4j2:
-    implementation(platform(notation = "org.apache.logging.log4j:log4j-bom:2.25.4"))
+
+    // Log4j2
+    implementation(platform("org.apache.logging.log4j:log4j-bom:2.25.4"))
     implementation("org.apache.logging.log4j:log4j-api")
     implementation("org.apache.logging.log4j:log4j-core")
     implementation("org.apache.logging.log4j:log4j-slf4j2-impl")
-    // Log4j2 Asynchronous:
     implementation("com.lmax:disruptor:4.0.0")
-    // Ikonli:
+
+    // Ikonli, POI e Jackson
     implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0")
     implementation("org.kordamp.ikonli:ikonli-fontawesome6-pack:12.4.0")
-    // POI:
     implementation("org.apache.poi:poi-ooxml:5.5.1")
-    // FasterXML:
     implementation("tools.jackson.core:jackson-databind:3.1.2")
 }
 
-tasks.test {
-    useJUnitPlatform()
+application {
+    mainClass.set("br.com.getronics.core.Main")
 }
 
-application {
-    // Enable the "application" gradle command
-    mainClass = "Main"
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=javafx.graphics",
-        // To activate the Log4j2 asynchronously:
-        "-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
-    )
+// Fat JAR:
+tasks.register<Jar>("fatJar") {
+    group = "build"
+    description = "JAR único com todas as dependências para o programa rodar."
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest {
+        attributes(
+            "Main-Class" to "Main",
+            "Multi-Release" to "true"
+        )
+    }
+
+    from(sourceSets.main.get().output)
+    dependsOn(configurations.runtimeClasspath)
+    from({
+        configurations.runtimeClasspath.get()
+            .filter { it.name.endsWith("jar") }
+            .map { zipTree(it) }
+    })
+
+    exclude("META-INF/*.SF")
+    exclude("META-INF/*.DSA")
+    exclude("META-INF/*.RSA")
+    exclude("META-INF/LICENSE*")
 }
